--- a/textbook-spa-frontend/index.html
+++ b/textbook-spa-frontend/index.html
@@ -5,9 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Textbook SPA</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <header>
+        <h1>Textbook Database</h1>
+    </header>
+    <main>
+        <h2>Select a School:</h2>
+        <ul class='school-list'>
+
+        </ul>
+    </main>
     <script src="./index.js"></script>
 </body>
 </html>
