--- a/textbook-spa-frontend/index.html
+++ b/textbook-spa-frontend/index.html
@@ -14,7 +14,7 @@
     <main>
         <h2>Select a School:</h2>
         <ul class='school-list'>
-
+            <!-- ***ADD ALPHA FILTER (FROM POKEMON LAB) -->
         </ul>
     </main>
     <script src="./index.js"></script>
