begin add course form

--- a/textbook-spa-frontend/index.html
+++ b/textbook-spa-frontend/index.html
@@ -18,7 +18,7 @@
                 <!-- ***ADD ALPHA FILTER (FROM POKEMON LAB) -->
             </ul>
         </div>
-        <div id='add-new-school'>
+        <div id='add-school'>
             <h2>Add a School</h2>
             <p>Enter a new school name, then click "Submit"</p>
             <form id='school-form'>
