--- a/textbook-spa-frontend/index.html
+++ b/textbook-spa-frontend/index.html
@@ -28,6 +28,8 @@
         </div>
 
     </main>
-    <script src="./index.js"></script>
+    <script src="./src/index.js"></script>
+    <script src="./src/schools.js"></script>
+
 </body>
 </html>
