--- a/textbook-spa-frontend/index.html
+++ b/textbook-spa-frontend/index.html
@@ -28,7 +28,8 @@
 
     </main>
     <script src="./src/index.js"></script>
-    <script src="./src/schools.js"></script>
+    <script src="./src/school.js"></script>
+    <script src="./src/course.js"></script>
 
 </body>
 </html>
