--- a/textbook-spa-frontend/index.html
+++ b/textbook-spa-frontend/index.html
@@ -30,6 +30,8 @@
     <script src="./src/index.js"></script>
     <script src="./src/school.js"></script>
     <script src="./src/course.js"></script>
+    <script src="./src/textbook.js"></script>
+
 
 </body>
 </html>
