organization and styling

--- a/textbook-spa-frontend/index.html
+++ b/textbook-spa-frontend/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <div id='listings'>
-            <h2>Select a School</h2>
+            <h2>Select a School to View Courses</h2>
             <ul class='school-list'>
             </ul>
         </div>
