--- a/textbook-spa-frontend/index.html
+++ b/textbook-spa-frontend/index.html
@@ -25,6 +25,9 @@
                 <input id='school-btn' type="submit" name="submit" value="Submit">
             </form>
         </div>
+        <br>
+        <br>
+        <div id="new-addition"></div>
 
     </main>
     <script src="./src/school.js"></script>
